src/main/java/com/example/suzumechat/service/channel/dto/message/error/ChatError.java
package com.example.suzumechat.service.channel.dto.message.error;

import com.example.suzumechat.utility.dto.message.ErrorMessage;

public class ChatError implements ErrorMessage {

}
